# walkie-textie-firmware

./: .gitignore  .gitmodules  .releaserc.json  Cargo.toml  README.md  espflash.toml  flash_devices.sh  flash_two_devices.sh
.cargo/: config.toml
.github/workflows/: release.yml
bootloader/: CMakeLists.txt  README.md  sdkconfig.defaults
hardware-design/: BOM with part number WIO Seeeed.xls  README.md
hardware-design/Production Files/BOM/: MESHTASTIC NODE-BOM.csv
hardware-design/Production Files/Gerber Files/: MESHTASTIC NODE-B_Cu.gbl  MESHTASTIC NODE-B_Mask.gbs  MESHTASTIC NODE-B_Paste.gbp  MESHTASTIC NODE-B_Silkscreen.gbo  MESHTASTIC NODE-Edge_Cuts.gm1  MESHTASTIC NODE-F_Cu.gtl  MESHTASTIC NODE-F_Mask.gts  MESHTASTIC NODE-F_Paste.gtp  MESHTASTIC NODE-F_Silkscreen.gto  MESHTASTIC NODE-In1_Cu.g1  MESHTASTIC NODE-In2_Cu.g2  MESHTASTIC NODE-NPTH.drl  MESHTASTIC NODE-PTH.drl  MESHTASTIC NODE-job.gbrjob
hardware-design/Production Files/Pick and Place/: MESHTASTIC NODE-CPL.csv
hardware-design/datasheets/: SUMMARY.md
hardware-design/diagrams/: README.md  block-diagram.mmd  component-overview.mmd
hardware-design/kicad/: RECOVERY.md
hardware-design/kicad/MESHTASTIC_NODE/: MESHTASTIC_NODE.kicad_pcb  MESHTASTIC_NODE.kicad_pro  MESHTASTIC_NODE.kicad_sch  ROUTING_TODO.md  fp-lib-table
hardware-design/tools/: board_setup.py  build_all.py  build_board.py  build_schematic.py  check_placement.py  fab_outputs.py  finish_route.py  make_box_models.py  maze.py  pcb_dsn.py  pcb_ses.py  place_from_cpl.py  placement.py  placement_diagram.py  pour.py  preroute.py  puppeteer-config.json  render_board.py  route.py  verify_nets.py
integration_tests/: Cargo.toml
integration_tests/src/: ble_ble_tests.rs  ble_client.rs  ble_serial_tests.rs  ble_tests.rs  device.rs  lora_tests.rs  main.rs  protocol.rs  tests.rs
src/: config.rs  debug.rs  lib.rs  main.rs
src/ble/: mod.rs  service.rs  tasks.rs
src/commands/: mod.rs  parser.rs  serialiser.rs  types.rs
src/dispatcher/: handler.rs  mod.rs
src/lora/: calibration.rs  driver.rs  mod.rs  traits.rs
src/protocol/: framing.rs
src/serial/: mod.rs  reader.rs  traits.rs
src/tasks/: admin.rs  ble.rs  led.rs  lora.rs  mod.rs  serial.rs
src/usb/: cdc_io.rs  mod.rs
